# Autonomous-Technical-Auditor-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  start-dev.ps1  start-dev.sh
.github/workflows/: ci.yml
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  LoadingState.tsx  MemoryPanel.tsx  ResultsCard.tsx  SearchInput.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/hooks/: index.ts  useExportPdf.ts  useMemory.ts  useResearch.ts
frontend/src/types/: research.ts
src/application/: __init__.py
src/application/services/: __init__.py  memory_manager.py  research_agent.py  sqlite_memory.py
src/application/tools/: __init__.py  text_analyzer.py  web_search.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  query.py  report.py  research.py
src/domain/ports/: __init__.py  llm_port.py  search_port.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  duckduckgo_adapter.py  gemini_adapter.py  groq_adapter.py  llm_factory.py
src/infrastructure/api/: dependencies.py  main.py
src/infrastructure/api/routes/: research.py
src/infrastructure/api/schemas/: research.py
terraform/: main.tf
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_entities.py  test_services.py
